--- a/.github/workflows/shell.yml
+++ b/.github/workflows/shell.yml
@@ -11,11 +11,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          repository: 'devnull-cz/unix-linux-prog-in-c-labs'
+          path: 'stef'
       - name: Checkout STEF
         uses: actions/checkout@v3
         with:
           repository: 'devnull-cz/stef'
           path: 'stef'
-      - name: Run
+      - name: Compile
+        run: echo gcc mysh.c
+      - name: Create test configuration
+        run: echo foo
+      - name: Run the tests
         run: pwd
