--- a/.github/workflows/shell.yml
+++ b/.github/workflows/shell.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          path: this
+          path: 'this'
       - name: Checkout labs
         uses: actions/checkout@v3
         with:
